--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,6 +26,16 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".opening.opening"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".LognReg.login"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
         <activity
             android:name=".Home.MainActivity"
             android:exported="false"
