--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.YOUNIFIRST">
 
         <activity
-            android:name=".Home.MainActivity"
+            android:name=".LognReg.login"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.YOUNIFIRST">
@@ -26,16 +26,16 @@
             </intent-filter>
         </activity>
 
-<!--        <activity-->
-<!--            android:name=".opening.opening"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/Theme.YOUNIFIRST"/>-->
-<!--        <activity-->
-<!--            android:name=".LognReg.login"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/Theme.YOUNIFIRST"/>-->
+        <activity
+            android:name=".opening.opening"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Home.MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
         <activity
             android:name=".Home.PengaturanActivity"
             android:exported="false"
@@ -83,6 +83,36 @@
             android:theme="@style/Theme.YOUNIFIRST"/>
         <activity
             android:name=".Event.EditEvent"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.TimAnda"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.BuatTim"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.Detail_rekrut_team"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.Posting_rekrut_team"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.Edit_Tim"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.Detail_Kompetisi"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.YOUNIFIRST"/>
