--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="36" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="36" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
         android:usesCleartextTraffic="true"
@@ -14,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.YOUNIFIRST">
+
 
         <activity
             android:name=".LognReg.login"
@@ -116,6 +124,15 @@
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Kompetisi.DaftarLombaSekarang"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.YOUNIFIRST"/>
+        <activity
+            android:name=".Event.DaftarEvent"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".Forum.BerhasilBuatForumActivity"/>
         <activity android:name=".Forum.ChatForumAdminActivity"/>
         <activity android:name=".Forum.ChatAnggotaDanAdminActivity"/>
